<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.karamoff.kawan_kawan.arithmaster.InfoActivity"
    android:background="@drawable/gradient_main">

    <LinearLayout
        android:id="@+id/topBarLayout"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:showDividers="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_to_menu"
            android:cropToPadding="false"
            app:srcCompat="@drawable/ic_arrow_back"
            app:tint="@color/grey80" />

        <TextView
            android:id="@+id/modeTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/source_sans_pro_light"
            android:gravity="center"
            android:letterSpacing="0.06"
            android:text="@string/info_name"
            android:textAllCaps="true"
            android:textColor="@color/grey80"
            android:textSize="30sp" />

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pause"
            android:cropToPadding="false"
            android:visibility="invisible" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro_light"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="36sp"
                android:fontFeatureSettings="smcp" />

            <TextView
                android:id="@+id/textView0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/source_sans_pro_light"
                android:text="@string/version"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro_light"
                android:text="@string/brought_to_you"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/source_sans_pro_light"
                android:text="@string/team_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro_light"
                android:text="@string/nikita_occ"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/source_sans_pro_light"
                android:text="@string/nikita_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro_light"
                android:text="@string/daria_occ"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/source_sans_pro_light"
                android:text="@string/daria_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro_light"
                android:text="@string/almaz_occ"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/source_sans_pro_light"
                android:text="@string/almaz_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
