<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    tools:context="ru.karamoff.kawan_kawan.arithmaster.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="144dp">

            <TextView
                android:id="@+id/appTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/source_sans_pro_light"
                android:fontFeatureSettings="smcp"
                android:text="@string/app_name"
                android:textColor="@color/grey80"
                android:textSize="24pt" />
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:gravity="center">

            <Button
                android:id="@+id/classicButton"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circle_classic"
                android:fontFamily="@font/source_sans_pro_light"
                android:letterSpacing="0.06"
                android:text="@string/classic_mode_name"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/infoButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/classicButton"
                android:background="@drawable/circle_info"
                android:fontFamily="@font/source_sans_pro_light"
                android:letterSpacing="0.06"
                android:text="@string/info_name"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>