<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_classic"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="ru.karamoff.kawan_kawan.arithmaster.ResultActivity">

    <LinearLayout
        android:id="@+id/topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:background="@color/barColorClassic"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_to_menu"
            android:cropToPadding="false"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/modeTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="64dp"
            android:layout_weight="1"
            android:fontFamily="@font/source_sans_pro_light"
            android:gravity="center"
            android:letterSpacing="0.06"
            android:text="@string/result_name"
            android:textAllCaps="true"
            android:textColor="@color/topBarContentColor"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:text="@string/end_good"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:textColor="@color/grey80" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                android:fontFamily="@font/source_sans_pro_light"
                android:text="@string/time"
                android:textAlignment="textEnd"
                android:textColor="@color/grey80"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:fontFamily="@font/source_sans_pro_light"
                android:text=""
                android:textColor="@color/grey80"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                android:fontFamily="@font/source_sans_pro_light"
                android:text="@string/correct"
                android:textAlignment="textEnd"
                android:textColor="@color/grey80"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/correctTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:fontFamily="@font/source_sans_pro_light"
                android:text=""
                android:textColor="@color/grey80"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                android:fontFamily="@font/source_sans_pro_light"
                android:text="@string/grade"
                android:textAlignment="textEnd"
                android:textColor="@color/grey80"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/scoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:fontFamily="@font/source_sans_pro_light"
                android:text=""
                android:textColor="@color/grey80"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/button_classic"
            android:fontFamily="@font/source_sans_pro_light"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/try_again"
            android:textSize="28sp" />

        <Button
            android:id="@+id/buttonBackToMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/button_classic"
            android:fontFamily="@font/source_sans_pro_light"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/back_to_menu"
            android:textSize="28sp" />
    </LinearLayout>

</LinearLayout>
